# Slots

./: .gitignore  README.md  TEAM_WORKFLOW.md
api/: .env.example  README.md  migrate.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 024dfab56d8f_create_placeholder_table.py  3d484a4e7855_create_users_table.py  926a9f0707eb_create_slots_table.py  ed75abc82b4e_create_bookings_table.py
api/app/: config.py  database.py  main.py
api/app/crud/: booking.py  slot.py  slots.py  users.py
api/app/dependencies/: auth.py
api/app/models/: __init__.py  booking.py  placeholder.py  slots.py  user.py
api/app/routers/: admin.py  auth.py  booking.py  slots.py
api/app/schemas/: booking.py  slot.py  user.py
api/app/services/: auth.py  booking.py
api/docs/: DEVELOPMENT_FLOW.md  OAUTH_AUTHENTICATION.md
api/migrations/: 001_users_table.sql
api/tests/: test_health.py  test_list_users.py  test_require_role.py  test_update_user_role.py
docs/: SPRINT2_PLAN.md
docs/contracts/: admin.md  bookings.md  slots.md
docs/epics/: 01-admin-roles.md  02-slot-management.md  03-slot-browsing-booking.md  04-google-calendar.md  05-frontend-shell.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/mocks/: bookings.json  slots.json  users.json
frontend/src/services/: api.js
slots/: package-lock.json  package.json
